app/assets/stylesheets/partials/status-panel.css.scss
.status-panel {
  padding: 0px;
  background: linear-gradient(to bottom, #f7f7f8 0%,#ffffff 100%);
  border-radius: 3px;

  .status-form {
    @extend .form-control;

    background: transparent;
    border: none !important;
    box-shadow: none !important;
    font-weight: 300;
    font-size: 16px;
    height: 50px;
    padding-top: 15px;
    padding-bottom: 15px;
    resize: none;
    transition: height 0.2s ease 0s;
  }
}

.status-update-panel {
  .status-box-wrapper {
    display: inline-block;
    padding-top: 6px;
  }
}

.story {
  @extend .panel;
  @extend .panel-default;

  margin-bottom: 10px;
  border-radius: 2px;

  .deleted-story {
    padding: 10px;
    font-size: 0.7em;
    text-transform: uppercase;
    font-weight: bold;
    text-align: center;
    opacity: 0.5;
  }
}

.update-panel {
  @extend .panel-body;

  &.is-new {
    opacity: 0.4;
  }

  .story-title {
    color: #999999;
    font-weight: 300;
    margin: 0 0 5px 0;

    a {
      color: #333;
      font-weight: 700;
    }
  }

  .series-thumb {
    @extend .col-xs-2;
    @extend .col-sm-2;
    @extend .col-md-2;

    padding-left: 0;
    padding-right: 0;
  }

  .media-content {
    @extend .col-xs-10;
    @extend .col-sm-10;
    @extend .col-md-10;
  }

  .genre-list {
    @extend .hidden-xs;
    @extend .inline-list;
    @extend .secondary;
    @extend .clearfix;
    
    font-size: 14px;
    
    /* because metamorphs */
    li:last-of-type:after {
      content: "";
    }
  }

  .user-info-bar {
    @extend .col-sm-12;
    margin-bottom: 15px;
  }

  .post-content {
    @extend .col-sm-12;
  }

  .user-image {
    @extend .col-xs-2;
    @extend .col-sm-1;
    @extend .col-md-1;

    padding-left: 0;
    padding-right: 0;
    @media (max-width: 767px) {
      padding: 0 0 7px 0;
      max-width: 52px;
    }
  }

  .comment-content {
    @extend .col-xs-10;
    @extend .col-sm-11;

    .reply-icon {
      color: #999999;
      padding-right: 5px;
      padding-left: 4px;
      position: relative;
      top: -1px;
      font-size: 0.6em;
    }

    .secondary {
      font-size: 12px;
    }

    .permalink {
      color: #999;
      transition: ease-in .2s;
      &:hover {
        color: $darkOrange;
      }
    }

    .remove-post {
      color: #999;
      transition: ease-in .2s;
      &:hover {
        color: red;
      }
    }
  }

  .inline-list {
    li {
      &:after {
        content: "\a0\00b7\a0";
        padding: 0 3px;
      }
      &:last-child {
        &:after {
          content: none;
        }
      }
    }
  }

  .comment-text {
    @extend .col-sm-12;
    @extend .col-xs-12;

    font-size: 16px;
    padding: 0;
    margin-bottom: 0;
    overflow: hidden;
    max-height: 500px;

    img {
      max-width: 100%;
    }

    a {
      display: block;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
    }

    .onebox a {
      white-space: normal;
    }

    iframe {
      width: 100%;
      min-height: 380px;
      border: none;
    }

    &.full-post {
      max-height: none;
    }
      
    .follow-bubbles {
      max-height: 480px;
      overflow: auto;
    }
  }

  .event-info {
    @extend .col-sm-12;
    @extend .col-md-11;

    p {
      font-size: 14px;
      margin-bottom: 0;
      margin-top: -5px;
      padding-top: 1px;
    }

    ul {
      padding-top: 1px;
      font-size: 13px;
      opacity: 0.8;
    }

    @media (max-width: 990px) {
      padding-left: 0px;
      p {
        font-size: 14px;
      }
    }
  }

  li.single-event {
    box-sizing: border-box;
    border-top: 1px solid #eee;
    padding-bottom: 10px;
    padding-top: 10px;
    transition: opacity 0.4s ease-in;

    &:nth-of-type(2) {
      @media (max-width: 400px) {
        display: none;
      }
    }
  }

  .feed-events {
    margin-top: 5px;
    .secondary {
      font-size: 13px;
    }
  }

  .view-more {
    text-align: center;
    display: block;
    font-size: 12px;
    margin-top: 5px;
  }
}

.story-actions {
  @extend .clearfix;
  .like {
    color: #7E7E7E;
    padding: 0 15px 10px;
    display: inline-block;
    font-size: 14px;
    .fa-heart-o {
      padding-left: 1px;
    }
    &:hover {
      color: #F87270;
    }
    &.active {
      color: #F87270;
      .fa-heart-o {
        @extend .animated;
        @extend .rubberBand;
        &:before {
          content: "\f004";
        }
      }
    }
  }
  .nsfw-indicator {
    color: #F87270;
    display: inline-block;
    padding: 0 0 10px 15px;
    font-size: 14px;
  }
  .active-users {
    float: right;
    padding-right: 10px;
    li {
      padding-left: 10px;
      float: left;
      img {
        width: 20px;
        border-radius: 3px;
      }
    }
    .more-users {
      background: #eee;
      border-radius: 3px;
      font-size: 12px;
      color: #737373;
      padding: 2px 9px 3px;
      &:hover {
        background: darken(#eee, 5);
      }
    }
  }
}

.story-modal {
  .modal-content {
    border: none;
    box-shadow: none;
    border-radius: 3px;
  }
  .section-label {
    @extend .col-sm-2;
    float: left;
    font-weight: 500;
    color: #F87270;
  }
  .all-likes {
    @extend .clearfix;
    ul {
      @extend .col-sm-10;
      li {
        width: 50px;
        float: left;
        margin-right: 10px;
        margin-bottom: 10px;
        img {
          width: 100%;
          border-radius: 3px;
        }
      }
    }
  }
}

.permalink-wrapper {
  margin-top: 60px;
  .update-feed {
    margin-bottom: 50px;
  }
  .follow-panel {
    .user-avatar {
      top: 100px;
      left: 20px;
      right: 10px;
      width: inherit;
      img {
        width: 90px;
        top: -40px;
      }
      .follow-button {
        padding: 5px 40px;
        margin-top: 18px;
      }
    }
    .user-info {
      margin-top: 65px;
      padding: 0 15px;
      h4 {
        font-size: 24px;
      }
    }
    .mini-bio {
      height: inherit;
      margin-bottom: 0;
    }
  }
  .guest-cta {
    background: #DDDDDD;
    padding: 15px;
    margin-top: 15px;
    margin-bottom: 50px;
    border-radius: 3px;
    color: #626262;
    .follow-button {
      width: 100%;
      background: #16a085;
      padding: 10px;
      &:hover {
        background: darken(#16a085, 5);
      }
    }
  }
}

.comment-replies {
  @extend .panel-footer;

  padding: 0;
  font-size: 0.8em;
  border-top: none;

  .actions {
    @extend .row;
    margin: 0;
    padding: 0;
  }

  .btn {
    display: inline-block;
    color: #666;
    border-radius: 0;

    .fa {
      margin-right: 2px;
    }
  }

  .reply-button {
    float: right;
    border-left: 1px solid #e0e0e0;
  }

  .reply-form {
    padding: 10px;
    margin-bottom: -2px;
    border-top: 1px solid #e0e0e0;

    textarea {
      width: 100%;
      border: 1px solid #ddd;
      border-radius: 3px;
      padding: 10px;
      resize: none;
    }
  }

  .reply {
    @extend .row;

    border-top: 1px solid #e0e0e0;
    padding: 10px;
    margin-left: 0;
    margin-right: 0;

    &.is-new {
      opacity: 0.4;
    }

    .user-avatar {
      @extend .col-xs-1;

      padding-left: 0;
      padding-right: 10px;
    }

    .content {
      @extend .col-xs-11;

      font-size: 14px;
      padding-left: 0;

      img:not(.emoji),
      video,
      iframe {
        display: block;
      }
    }

    .username a {
      color: #333;
      font-weight: bold;
    }

    .remove-post {
      color: #999999;
      &:hover {
        color: #c0392b;
      }
    }

    p {
      margin: 0;
      overflow: hidden;
      text-overflow: ellipsis;
    }
  }

  .view-more {
    border-top: 1px solid #e0e0e0;
    text-align: center;
    padding: 10px;
  }
}

.feed-comment-wrapper {
  background-color: $eggshell;
  border-top: 1px solid #ddd;
  padding-top: 15px;
  padding-bottom: 3px;
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
  width: 100%;

  .feed-comment-form {
    padding-bottom: 11px;
  }

  .feed-comment {
    .row {
      border-top: 1px solid #ddd;
      margin-top: 3px;
      padding-top: 10px;
      word-wrap: break-word;
    }

    .user-image {
      padding: 0;
    }

    .user-name {
      margin-top: 5px;
      margin-bottom: 5px;
    }

    .comment-content {
      @media (max-width: 991px) {
        padding-left: 0;
      }
    }
  }
}

.comment {
  img {
    display: block;
  }
  .emoji {
    display: inline-block;
  }
  iframe { 
    display: block;
    width: 100%;
  }
}

// Onebox
.onebox {
  border: 1px solid #ddd;
  border-radius: 3px;
  padding: 15px;
  position: relative;
  .source {
    display: inline-block;
    background: #ddd;
    border-bottom-right-radius: 3px;
    border-top-left-radius: 3px;
    padding: 5px 10px;
    position: absolute;
    top: 0;
    left: 0;
    font-size: 12px;
    a {
      color: #999;
    }
  }
}

.onebox-body {
  img {
    float: left;
    margin-right: 20px;
    margin-bottom: 10px;
    padding: 0;
    border: none;
    border-radius: 3px;
    max-width: 200px;
  }
  p:last-child {
    margin-bottom: 0;
  }
  &.media-embed {
    img {
      max-width: 100px;
    }
    h4 {
      font-size: 16px;
      margin-top: -9px;
      font-weight: normal;
      color: #999999;
    }
  }
}

.comment .onebox {
  margin-top: 5px;
  background: #F9F9F9;
}

.vine-embed {
  width: 100%;
}

.gfyVidIframe {
  width: 100%;
}

